--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,8 @@ input:focus{
 	outline: none;
 }
 
-input::-webkit-outer-spin-button, input::-webkit-inner-spin-button{
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button{
 	-webkit-appearance: none;
 }
 
